src/wizuall.output
State 35 conflicts: 6 shift/reduce
State 59 conflicts: 10 shift/reduce
State 60 conflicts: 10 shift/reduce
State 61 conflicts: 10 shift/reduce
State 62 conflicts: 10 shift/reduce
State 63 conflicts: 10 shift/reduce
State 64 conflicts: 10 shift/reduce
State 65 conflicts: 6 shift/reduce
State 66 conflicts: 6 shift/reduce
State 67 conflicts: 6 shift/reduce
State 68 conflicts: 6 shift/reduce


Grammar

    0 $accept: program $end

    1 program: stmt_list

    2 stmt_list: ε
    3          | stmt_list stmt

    4 stmt: ID ASSIGN expr SEMICOLON
    5     | PRINT LPAREN expr RPAREN SEMICOLON
    6     | PLOT LPAREN expr RPAREN SEMICOLON
    7     | HISTOGRAM LPAREN expr RPAREN SEMICOLON
    8     | SCATTER LPAREN expr COMMA expr RPAREN SEMICOLON
    9     | IF LPAREN expr RPAREN LBRACE stmt_list RBRACE
   10     | IF LPAREN expr RPAREN LBRACE stmt_list RBRACE ELSE LBRACE stmt_list RBRACE
   11     | WHILE LPAREN expr RPAREN LBRACE stmt_list RBRACE

   12 expr: NUMBER
   13     | ID
   14     | LBRACKET vector_elems RBRACKET
   15     | LPAREN expr RPAREN
   16     | expr '+' expr
   17     | expr '-' expr
   18     | expr '*' expr
   19     | expr '/' expr
   20     | expr GT expr
   21     | expr LT expr
   22     | expr GTE expr
   23     | expr LTE expr
   24     | expr EQ expr
   25     | expr NEQ expr
   26     | '-' expr
   27     | ID LPAREN arg_list RPAREN

   28 vector_elems: expr
   29             | vector_elems COMMA expr

   30 arg_list: ε
   31         | arg_list_nonempty

   32 arg_list_nonempty: expr
   33                  | arg_list_nonempty COMMA expr


Terminals, with rules where they appear

    $end (0) 0
    '*' (42) 18
    '+' (43) 16
    '-' (45) 17 26
    '/' (47) 19
    error (256)
    NUMBER <numVal> (258) 12
    ID <strVal> (259) 4 13 27
    PLOT (260) 6
    HISTOGRAM (261) 7
    SCATTER (262) 8
    PRINT (263) 5
    IF (264) 9 10
    ELSE (265) 10
    WHILE (266) 11
    ASSIGN (267) 4
    LBRACKET (268) 14
    RBRACKET (269) 14
    COMMA (270) 8 29 33
    LPAREN (271) 5 6 7 8 9 10 11 15 27
    RPAREN (272) 5 6 7 8 9 10 11 15 27
    LBRACE (273) 9 10 11
    RBRACE (274) 9 10 11
    SEMICOLON (275) 4 5 6 7 8
    EQ (276) 24
    NEQ (277) 25
    GT (278) 20
    LT (279) 21
    GTE (280) 22
    LTE (281) 23
    UMINUS (282)


Nonterminals, with rules where they appear

    $accept (32)
        on left: 0
    program <node> (33)
        on left: 1
        on right: 0
    stmt_list <nodelist> (34)
        on left: 2 3
        on right: 1 3 9 10 11
    stmt <node> (35)
        on left: 4 5 6 7 8 9 10 11
        on right: 3
    expr <node> (36)
        on left: 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27
        on right: 4 5 6 7 8 9 10 11 15 16 17 18 19 20 21 22 23 24 25 26 28 29 32 33
    vector_elems <nodelist> (37)
        on left: 28 29
        on right: 14 29
    arg_list <nodelist> (38)
        on left: 30 31
        on right: 27
    arg_list_nonempty <nodelist> (39)
        on left: 32 33
        on right: 31 33


State 0

    0 $accept: • program $end

    $default  reduce using rule 2 (stmt_list)

    program    go to state 1
    stmt_list  go to state 2


State 1

    0 $accept: program • $end

    $end  shift, and go to state 3


State 2

    1 program: stmt_list •
    3 stmt_list: stmt_list • stmt

    ID         shift, and go to state 4
    PLOT       shift, and go to state 5
    HISTOGRAM  shift, and go to state 6
    SCATTER    shift, and go to state 7
    PRINT      shift, and go to state 8
    IF         shift, and go to state 9
    WHILE      shift, and go to state 10

    $default  reduce using rule 1 (program)

    stmt  go to state 11


State 3

    0 $accept: program $end •

    $default  accept


State 4

    4 stmt: ID • ASSIGN expr SEMICOLON

    ASSIGN  shift, and go to state 12


State 5

    6 stmt: PLOT • LPAREN expr RPAREN SEMICOLON

    LPAREN  shift, and go to state 13


State 6

    7 stmt: HISTOGRAM • LPAREN expr RPAREN SEMICOLON

    LPAREN  shift, and go to state 14


State 7

    8 stmt: SCATTER • LPAREN expr COMMA expr RPAREN SEMICOLON

    LPAREN  shift, and go to state 15


State 8

    5 stmt: PRINT • LPAREN expr RPAREN SEMICOLON

    LPAREN  shift, and go to state 16


State 9

    9 stmt: IF • LPAREN expr RPAREN LBRACE stmt_list RBRACE
   10     | IF • LPAREN expr RPAREN LBRACE stmt_list RBRACE ELSE LBRACE stmt_list RBRACE

    LPAREN  shift, and go to state 17


State 10

   11 stmt: WHILE • LPAREN expr RPAREN LBRACE stmt_list RBRACE

    LPAREN  shift, and go to state 18


State 11

    3 stmt_list: stmt_list stmt •

    $default  reduce using rule 3 (stmt_list)


State 12

    4 stmt: ID ASSIGN • expr SEMICOLON

    NUMBER    shift, and go to state 19
    ID        shift, and go to state 20
    LBRACKET  shift, and go to state 21
    LPAREN    shift, and go to state 22
    '-'       shift, and go to state 23

    expr  go to state 24


State 13

    6 stmt: PLOT LPAREN • expr RPAREN SEMICOLON

    NUMBER    shift, and go to state 19
    ID        shift, and go to state 20
    LBRACKET  shift, and go to state 21
    LPAREN    shift, and go to state 22
    '-'       shift, and go to state 23

    expr  go to state 25


State 14

    7 stmt: HISTOGRAM LPAREN • expr RPAREN SEMICOLON

    NUMBER    shift, and go to state 19
    ID        shift, and go to state 20
    LBRACKET  shift, and go to state 21
    LPAREN    shift, and go to state 22
    '-'       shift, and go to state 23

    expr  go to state 26


State 15

    8 stmt: SCATTER LPAREN • expr COMMA expr RPAREN SEMICOLON

    NUMBER    shift, and go to state 19
    ID        shift, and go to state 20
    LBRACKET  shift, and go to state 21
    LPAREN    shift, and go to state 22
    '-'       shift, and go to state 23

    expr  go to state 27


State 16

    5 stmt: PRINT LPAREN • expr RPAREN SEMICOLON

    NUMBER    shift, and go to state 19
    ID        shift, and go to state 20
    LBRACKET  shift, and go to state 21
    LPAREN    shift, and go to state 22
    '-'       shift, and go to state 23

    expr  go to state 28


State 17

    9 stmt: IF LPAREN • expr RPAREN LBRACE stmt_list RBRACE
   10     | IF LPAREN • expr RPAREN LBRACE stmt_list RBRACE ELSE LBRACE stmt_list RBRACE

    NUMBER    shift, and go to state 19
    ID        shift, and go to state 20
    LBRACKET  shift, and go to state 21
    LPAREN    shift, and go to state 22
    '-'       shift, and go to state 23

    expr  go to state 29


State 18

   11 stmt: WHILE LPAREN • expr RPAREN LBRACE stmt_list RBRACE

    NUMBER    shift, and go to state 19
    ID        shift, and go to state 20
    LBRACKET  shift, and go to state 21
    LPAREN    shift, and go to state 22
    '-'       shift, and go to state 23

    expr  go to state 30


State 19

   12 expr: NUMBER •

    $default  reduce using rule 12 (expr)


State 20

   13 expr: ID •
   27     | ID • LPAREN arg_list RPAREN

    LPAREN  shift, and go to state 31

    $default  reduce using rule 13 (expr)


State 21

   14 expr: LBRACKET • vector_elems RBRACKET

    NUMBER    shift, and go to state 19
    ID        shift, and go to state 20
    LBRACKET  shift, and go to state 21
    LPAREN    shift, and go to state 22
    '-'       shift, and go to state 23

    expr          go to state 32
    vector_elems  go to state 33


State 22

   15 expr: LPAREN • expr RPAREN

    NUMBER    shift, and go to state 19
    ID        shift, and go to state 20
    LBRACKET  shift, and go to state 21
    LPAREN    shift, and go to state 22
    '-'       shift, and go to state 23

    expr  go to state 34


State 23

   26 expr: '-' • expr

    NUMBER    shift, and go to state 19
    ID        shift, and go to state 20
    LBRACKET  shift, and go to state 21
    LPAREN    shift, and go to state 22
    '-'       shift, and go to state 23

    expr  go to state 35


State 24

    4 stmt: ID ASSIGN expr • SEMICOLON
   16 expr: expr • '+' expr
   17     | expr • '-' expr
   18     | expr • '*' expr
   19     | expr • '/' expr
   20     | expr • GT expr
   21     | expr • LT expr
   22     | expr • GTE expr
   23     | expr • LTE expr
   24     | expr • EQ expr
   25     | expr • NEQ expr

    SEMICOLON  shift, and go to state 36
    EQ         shift, and go to state 37
    NEQ        shift, and go to state 38
    GT         shift, and go to state 39
    LT         shift, and go to state 40
    GTE        shift, and go to state 41
    LTE        shift, and go to state 42
    '+'        shift, and go to state 43
    '-'        shift, and go to state 44
    '*'        shift, and go to state 45
    '/'        shift, and go to state 46


State 25

    6 stmt: PLOT LPAREN expr • RPAREN SEMICOLON
   16 expr: expr • '+' expr
   17     | expr • '-' expr
   18     | expr • '*' expr
   19     | expr • '/' expr
   20     | expr • GT expr
   21     | expr • LT expr
   22     | expr • GTE expr
   23     | expr • LTE expr
   24     | expr • EQ expr
   25     | expr • NEQ expr

    RPAREN  shift, and go to state 47
    EQ      shift, and go to state 37
    NEQ     shift, and go to state 38
    GT      shift, and go to state 39
    LT      shift, and go to state 40
    GTE     shift, and go to state 41
    LTE     shift, and go to state 42
    '+'     shift, and go to state 43
    '-'     shift, and go to state 44
    '*'     shift, and go to state 45
    '/'     shift, and go to state 46


State 26

    7 stmt: HISTOGRAM LPAREN expr • RPAREN SEMICOLON
   16 expr: expr • '+' expr
   17     | expr • '-' expr
   18     | expr • '*' expr
   19     | expr • '/' expr
   20     | expr • GT expr
   21     | expr • LT expr
   22     | expr • GTE expr
   23     | expr • LTE expr
   24     | expr • EQ expr
   25     | expr • NEQ expr

    RPAREN  shift, and go to state 48
    EQ      shift, and go to state 37
    NEQ     shift, and go to state 38
    GT      shift, and go to state 39
    LT      shift, and go to state 40
    GTE     shift, and go to state 41
    LTE     shift, and go to state 42
    '+'     shift, and go to state 43
    '-'     shift, and go to state 44
    '*'     shift, and go to state 45
    '/'     shift, and go to state 46


State 27

    8 stmt: SCATTER LPAREN expr • COMMA expr RPAREN SEMICOLON
   16 expr: expr • '+' expr
   17     | expr • '-' expr
   18     | expr • '*' expr
   19     | expr • '/' expr
   20     | expr • GT expr
   21     | expr • LT expr
   22     | expr • GTE expr
   23     | expr • LTE expr
   24     | expr • EQ expr
   25     | expr • NEQ expr

    COMMA  shift, and go to state 49
    EQ     shift, and go to state 37
    NEQ    shift, and go to state 38
    GT     shift, and go to state 39
    LT     shift, and go to state 40
    GTE    shift, and go to state 41
    LTE    shift, and go to state 42
    '+'    shift, and go to state 43
    '-'    shift, and go to state 44
    '*'    shift, and go to state 45
    '/'    shift, and go to state 46


State 28

    5 stmt: PRINT LPAREN expr • RPAREN SEMICOLON
   16 expr: expr • '+' expr
   17     | expr • '-' expr
   18     | expr • '*' expr
   19     | expr • '/' expr
   20     | expr • GT expr
   21     | expr • LT expr
   22     | expr • GTE expr
   23     | expr • LTE expr
   24     | expr • EQ expr
   25     | expr • NEQ expr

    RPAREN  shift, and go to state 50
    EQ      shift, and go to state 37
    NEQ     shift, and go to state 38
    GT      shift, and go to state 39
    LT      shift, and go to state 40
    GTE     shift, and go to state 41
    LTE     shift, and go to state 42
    '+'     shift, and go to state 43
    '-'     shift, and go to state 44
    '*'     shift, and go to state 45
    '/'     shift, and go to state 46


State 29

    9 stmt: IF LPAREN expr • RPAREN LBRACE stmt_list RBRACE
   10     | IF LPAREN expr • RPAREN LBRACE stmt_list RBRACE ELSE LBRACE stmt_list RBRACE
   16 expr: expr • '+' expr
   17     | expr • '-' expr
   18     | expr • '*' expr
   19     | expr • '/' expr
   20     | expr • GT expr
   21     | expr • LT expr
   22     | expr • GTE expr
   23     | expr • LTE expr
   24     | expr • EQ expr
   25     | expr • NEQ expr

    RPAREN  shift, and go to state 51
    EQ      shift, and go to state 37
    NEQ     shift, and go to state 38
    GT      shift, and go to state 39
    LT      shift, and go to state 40
    GTE     shift, and go to state 41
    LTE     shift, and go to state 42
    '+'     shift, and go to state 43
    '-'     shift, and go to state 44
    '*'     shift, and go to state 45
    '/'     shift, and go to state 46


State 30

   11 stmt: WHILE LPAREN expr • RPAREN LBRACE stmt_list RBRACE
   16 expr: expr • '+' expr
   17     | expr • '-' expr
   18     | expr • '*' expr
   19     | expr • '/' expr
   20     | expr • GT expr
   21     | expr • LT expr
   22     | expr • GTE expr
   23     | expr • LTE expr
   24     | expr • EQ expr
   25     | expr • NEQ expr

    RPAREN  shift, and go to state 52
    EQ      shift, and go to state 37
    NEQ     shift, and go to state 38
    GT      shift, and go to state 39
    LT      shift, and go to state 40
    GTE     shift, and go to state 41
    LTE     shift, and go to state 42
    '+'     shift, and go to state 43
    '-'     shift, and go to state 44
    '*'     shift, and go to state 45
    '/'     shift, and go to state 46


State 31

   27 expr: ID LPAREN • arg_list RPAREN

    NUMBER    shift, and go to state 19
    ID        shift, and go to state 20
    LBRACKET  shift, and go to state 21
    LPAREN    shift, and go to state 22
    '-'       shift, and go to state 23

    $default  reduce using rule 30 (arg_list)

    expr               go to state 53
    arg_list           go to state 54
    arg_list_nonempty  go to state 55


State 32

   16 expr: expr • '+' expr
   17     | expr • '-' expr
   18     | expr • '*' expr
   19     | expr • '/' expr
   20     | expr • GT expr
   21     | expr • LT expr
   22     | expr • GTE expr
   23     | expr • LTE expr
   24     | expr • EQ expr
   25     | expr • NEQ expr
   28 vector_elems: expr •

    EQ   shift, and go to state 37
    NEQ  shift, and go to state 38
    GT   shift, and go to state 39
    LT   shift, and go to state 40
    GTE  shift, and go to state 41
    LTE  shift, and go to state 42
    '+'  shift, and go to state 43
    '-'  shift, and go to state 44
    '*'  shift, and go to state 45
    '/'  shift, and go to state 46

    $default  reduce using rule 28 (vector_elems)


State 33

   14 expr: LBRACKET vector_elems • RBRACKET
   29 vector_elems: vector_elems • COMMA expr

    RBRACKET  shift, and go to state 56
    COMMA     shift, and go to state 57


State 34

   15 expr: LPAREN expr • RPAREN
   16     | expr • '+' expr
   17     | expr • '-' expr
   18     | expr • '*' expr
   19     | expr • '/' expr
   20     | expr • GT expr
   21     | expr • LT expr
   22     | expr • GTE expr
   23     | expr • LTE expr
   24     | expr • EQ expr
   25     | expr • NEQ expr

    RPAREN  shift, and go to state 58
    EQ      shift, and go to state 37
    NEQ     shift, and go to state 38
    GT      shift, and go to state 39
    LT      shift, and go to state 40
    GTE     shift, and go to state 41
    LTE     shift, and go to state 42
    '+'     shift, and go to state 43
    '-'     shift, and go to state 44
    '*'     shift, and go to state 45
    '/'     shift, and go to state 46


State 35

   16 expr: expr • '+' expr
   17     | expr • '-' expr
   18     | expr • '*' expr
   19     | expr • '/' expr
   20     | expr • GT expr
   21     | expr • LT expr
   22     | expr • GTE expr
   23     | expr • LTE expr
   24     | expr • EQ expr
   25     | expr • NEQ expr
   26     | '-' expr •

    EQ   shift, and go to state 37
    NEQ  shift, and go to state 38
    GT   shift, and go to state 39
    LT   shift, and go to state 40
    GTE  shift, and go to state 41
    LTE  shift, and go to state 42

    EQ        [reduce using rule 26 (expr)]
    NEQ       [reduce using rule 26 (expr)]
    GT        [reduce using rule 26 (expr)]
    LT        [reduce using rule 26 (expr)]
    GTE       [reduce using rule 26 (expr)]
    LTE       [reduce using rule 26 (expr)]
    $default  reduce using rule 26 (expr)


State 36

    4 stmt: ID ASSIGN expr SEMICOLON •

    $default  reduce using rule 4 (stmt)


State 37

   24 expr: expr EQ • expr

    NUMBER    shift, and go to state 19
    ID        shift, and go to state 20
    LBRACKET  shift, and go to state 21
    LPAREN    shift, and go to state 22
    '-'       shift, and go to state 23

    expr  go to state 59


State 38

   25 expr: expr NEQ • expr

    NUMBER    shift, and go to state 19
    ID        shift, and go to state 20
    LBRACKET  shift, and go to state 21
    LPAREN    shift, and go to state 22
    '-'       shift, and go to state 23

    expr  go to state 60


State 39

   20 expr: expr GT • expr

    NUMBER    shift, and go to state 19
    ID        shift, and go to state 20
    LBRACKET  shift, and go to state 21
    LPAREN    shift, and go to state 22
    '-'       shift, and go to state 23

    expr  go to state 61


State 40

   21 expr: expr LT • expr

    NUMBER    shift, and go to state 19
    ID        shift, and go to state 20
    LBRACKET  shift, and go to state 21
    LPAREN    shift, and go to state 22
    '-'       shift, and go to state 23

    expr  go to state 62


State 41

   22 expr: expr GTE • expr

    NUMBER    shift, and go to state 19
    ID        shift, and go to state 20
    LBRACKET  shift, and go to state 21
    LPAREN    shift, and go to state 22
    '-'       shift, and go to state 23

    expr  go to state 63


State 42

   23 expr: expr LTE • expr

    NUMBER    shift, and go to state 19
    ID        shift, and go to state 20
    LBRACKET  shift, and go to state 21
    LPAREN    shift, and go to state 22
    '-'       shift, and go to state 23

    expr  go to state 64


State 43

   16 expr: expr '+' • expr

    NUMBER    shift, and go to state 19
    ID        shift, and go to state 20
    LBRACKET  shift, and go to state 21
    LPAREN    shift, and go to state 22
    '-'       shift, and go to state 23

    expr  go to state 65


State 44

   17 expr: expr '-' • expr

    NUMBER    shift, and go to state 19
    ID        shift, and go to state 20
    LBRACKET  shift, and go to state 21
    LPAREN    shift, and go to state 22
    '-'       shift, and go to state 23

    expr  go to state 66


State 45

   18 expr: expr '*' • expr

    NUMBER    shift, and go to state 19
    ID        shift, and go to state 20
    LBRACKET  shift, and go to state 21
    LPAREN    shift, and go to state 22
    '-'       shift, and go to state 23

    expr  go to state 67


State 46

   19 expr: expr '/' • expr

    NUMBER    shift, and go to state 19
    ID        shift, and go to state 20
    LBRACKET  shift, and go to state 21
    LPAREN    shift, and go to state 22
    '-'       shift, and go to state 23

    expr  go to state 68


State 47

    6 stmt: PLOT LPAREN expr RPAREN • SEMICOLON

    SEMICOLON  shift, and go to state 69


State 48

    7 stmt: HISTOGRAM LPAREN expr RPAREN • SEMICOLON

    SEMICOLON  shift, and go to state 70


State 49

    8 stmt: SCATTER LPAREN expr COMMA • expr RPAREN SEMICOLON

    NUMBER    shift, and go to state 19
    ID        shift, and go to state 20
    LBRACKET  shift, and go to state 21
    LPAREN    shift, and go to state 22
    '-'       shift, and go to state 23

    expr  go to state 71


State 50

    5 stmt: PRINT LPAREN expr RPAREN • SEMICOLON

    SEMICOLON  shift, and go to state 72


State 51

    9 stmt: IF LPAREN expr RPAREN • LBRACE stmt_list RBRACE
   10     | IF LPAREN expr RPAREN • LBRACE stmt_list RBRACE ELSE LBRACE stmt_list RBRACE

    LBRACE  shift, and go to state 73


State 52

   11 stmt: WHILE LPAREN expr RPAREN • LBRACE stmt_list RBRACE

    LBRACE  shift, and go to state 74


State 53

   16 expr: expr • '+' expr
   17     | expr • '-' expr
   18     | expr • '*' expr
   19     | expr • '/' expr
   20     | expr • GT expr
   21     | expr • LT expr
   22     | expr • GTE expr
   23     | expr • LTE expr
   24     | expr • EQ expr
   25     | expr • NEQ expr
   32 arg_list_nonempty: expr •

    EQ   shift, and go to state 37
    NEQ  shift, and go to state 38
    GT   shift, and go to state 39
    LT   shift, and go to state 40
    GTE  shift, and go to state 41
    LTE  shift, and go to state 42
    '+'  shift, and go to state 43
    '-'  shift, and go to state 44
    '*'  shift, and go to state 45
    '/'  shift, and go to state 46

    $default  reduce using rule 32 (arg_list_nonempty)


State 54

   27 expr: ID LPAREN arg_list • RPAREN

    RPAREN  shift, and go to state 75


State 55

   31 arg_list: arg_list_nonempty •
   33 arg_list_nonempty: arg_list_nonempty • COMMA expr

    COMMA  shift, and go to state 76

    $default  reduce using rule 31 (arg_list)


State 56

   14 expr: LBRACKET vector_elems RBRACKET •

    $default  reduce using rule 14 (expr)


State 57

   29 vector_elems: vector_elems COMMA • expr

    NUMBER    shift, and go to state 19
    ID        shift, and go to state 20
    LBRACKET  shift, and go to state 21
    LPAREN    shift, and go to state 22
    '-'       shift, and go to state 23

    expr  go to state 77


State 58

   15 expr: LPAREN expr RPAREN •

    $default  reduce using rule 15 (expr)


State 59

   16 expr: expr • '+' expr
   17     | expr • '-' expr
   18     | expr • '*' expr
   19     | expr • '/' expr
   20     | expr • GT expr
   21     | expr • LT expr
   22     | expr • GTE expr
   23     | expr • LTE expr
   24     | expr • EQ expr
   24     | expr EQ expr •
   25     | expr • NEQ expr

    EQ   shift, and go to state 37
    NEQ  shift, and go to state 38
    GT   shift, and go to state 39
    LT   shift, and go to state 40
    GTE  shift, and go to state 41
    LTE  shift, and go to state 42
    '+'  shift, and go to state 43
    '-'  shift, and go to state 44
    '*'  shift, and go to state 45
    '/'  shift, and go to state 46

    EQ        [reduce using rule 24 (expr)]
    NEQ       [reduce using rule 24 (expr)]
    GT        [reduce using rule 24 (expr)]
    LT        [reduce using rule 24 (expr)]
    GTE       [reduce using rule 24 (expr)]
    LTE       [reduce using rule 24 (expr)]
    '+'       [reduce using rule 24 (expr)]
    '-'       [reduce using rule 24 (expr)]
    '*'       [reduce using rule 24 (expr)]
    '/'       [reduce using rule 24 (expr)]
    $default  reduce using rule 24 (expr)


State 60

   16 expr: expr • '+' expr
   17     | expr • '-' expr
   18     | expr • '*' expr
   19     | expr • '/' expr
   20     | expr • GT expr
   21     | expr • LT expr
   22     | expr • GTE expr
   23     | expr • LTE expr
   24     | expr • EQ expr
   25     | expr • NEQ expr
   25     | expr NEQ expr •

    EQ   shift, and go to state 37
    NEQ  shift, and go to state 38
    GT   shift, and go to state 39
    LT   shift, and go to state 40
    GTE  shift, and go to state 41
    LTE  shift, and go to state 42
    '+'  shift, and go to state 43
    '-'  shift, and go to state 44
    '*'  shift, and go to state 45
    '/'  shift, and go to state 46

    EQ        [reduce using rule 25 (expr)]
    NEQ       [reduce using rule 25 (expr)]
    GT        [reduce using rule 25 (expr)]
    LT        [reduce using rule 25 (expr)]
    GTE       [reduce using rule 25 (expr)]
    LTE       [reduce using rule 25 (expr)]
    '+'       [reduce using rule 25 (expr)]
    '-'       [reduce using rule 25 (expr)]
    '*'       [reduce using rule 25 (expr)]
    '/'       [reduce using rule 25 (expr)]
    $default  reduce using rule 25 (expr)


State 61

   16 expr: expr • '+' expr
   17     | expr • '-' expr
   18     | expr • '*' expr
   19     | expr • '/' expr
   20     | expr • GT expr
   20     | expr GT expr •
   21     | expr • LT expr
   22     | expr • GTE expr
   23     | expr • LTE expr
   24     | expr • EQ expr
   25     | expr • NEQ expr

    EQ   shift, and go to state 37
    NEQ  shift, and go to state 38
    GT   shift, and go to state 39
    LT   shift, and go to state 40
    GTE  shift, and go to state 41
    LTE  shift, and go to state 42
    '+'  shift, and go to state 43
    '-'  shift, and go to state 44
    '*'  shift, and go to state 45
    '/'  shift, and go to state 46

    EQ        [reduce using rule 20 (expr)]
    NEQ       [reduce using rule 20 (expr)]
    GT        [reduce using rule 20 (expr)]
    LT        [reduce using rule 20 (expr)]
    GTE       [reduce using rule 20 (expr)]
    LTE       [reduce using rule 20 (expr)]
    '+'       [reduce using rule 20 (expr)]
    '-'       [reduce using rule 20 (expr)]
    '*'       [reduce using rule 20 (expr)]
    '/'       [reduce using rule 20 (expr)]
    $default  reduce using rule 20 (expr)


State 62

   16 expr: expr • '+' expr
   17     | expr • '-' expr
   18     | expr • '*' expr
   19     | expr • '/' expr
   20     | expr • GT expr
   21     | expr • LT expr
   21     | expr LT expr •
   22     | expr • GTE expr
   23     | expr • LTE expr
   24     | expr • EQ expr
   25     | expr • NEQ expr

    EQ   shift, and go to state 37
    NEQ  shift, and go to state 38
    GT   shift, and go to state 39
    LT   shift, and go to state 40
    GTE  shift, and go to state 41
    LTE  shift, and go to state 42
    '+'  shift, and go to state 43
    '-'  shift, and go to state 44
    '*'  shift, and go to state 45
    '/'  shift, and go to state 46
